[gd_scene load_steps=7 format=3 uid="uid://xs3cr8c04y46"]

[ext_resource type="Script" uid="uid://drq4pjecf7mlj" path="res://scripts/hud.gd" id="1_x4jx1"]
[ext_resource type="PackedScene" path="res://scenes/interaction_menu.tscn" id="2_yev5y"]
[ext_resource type="PackedScene" uid="uid://c7n8k3nap2q1r" path="res://scenes/end_of_day_menu.tscn" id="3_eod"]
[ext_resource type="PackedScene" uid="uid://c8kqm3r9xbx4q" path="res://scenes/customer_interactions_menu.tscn" id="4_customer_interactions"]

[sub_resource type="LabelSettings" id="LabelSettings_day"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_time"]

[node name="UI" type="CanvasLayer"]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_x4jx1")

[node name="BottomLeft" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -16.0
grow_vertical = 0

[node name="DayCounter" type="Label" parent="HUD/BottomLeft"]
layout_mode = 2
text = "Day 1"
label_settings = SubResource("LabelSettings_day")

[node name="TimeLabel" type="Label" parent="HUD/BottomLeft"]
layout_mode = 2
text = "Time: 0%"
label_settings = SubResource("LabelSettings_time")

[node name="TopRight" type="VBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="MenuButton" type="Button" parent="HUD/TopRight"]
layout_mode = 2
text = "Menu"

[node name="InteractionsButton" type="Button" parent="HUD/TopRight"]
layout_mode = 2
text = "Interactions (0)"

[node name="InteractionMenu" parent="." instance=ExtResource("2_yev5y")]

[node name="CustomerInteractionsMenu" parent="." instance=ExtResource("4_customer_interactions")]

[node name="EndOfDayMenu" parent="." instance=ExtResource("3_eod")]
